# tool-calling-LM

./: .gitignore  .gitmodules  README.md  backend.py  evaluate.py  experiments.ipynb  main.py  pyproject.toml
configs/: __init__.py  large.json  medium.json  small.json
model/: __init__.py  autograd.py  layers.py  transformer.py
training/: data_utils.py  optimizer.py  tokenizer.py  train.py
