[project]
name = "tool-calling-lm"
version = "0.1.0"
description = "A small decoder-only Transformer trained to map natural-language queries to structured tool calls, built from scratch in NumPy."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "torch>=2.6",
]
